# SilkTex

./: .gitignore  CLAUDE.md  README.md  TODO.md  app.silktex.SilkTex.yml  meson.build  run.sh  script.py  settings
data/: silktex.gresource.xml
data/icons/: meson.build
data/misc/: app.silktex.SilkTex.desktop.in
data/templates/: Silktex_Beamer.tex
data/ui/: main.blp  meson.build  settings
flatpak/: app.silktex.SilkTex.yml  build.sh
src/: application.c  application.h  compiler.c  compiler.h  configfile.c  configfile.h  constants.h  editor.c  editor.h  git.c  git.h  i18n.h  latex.c  latex.h  main.c  prefs.c  prefs.h  preview.c  preview.h  searchbar.c  searchbar.h  snippets.c  snippets.h  structure.c  structure.h  style-schemes.c  style-schemes.h  synctex.c  synctex.h  utils.c  utils.h  window-git.c  window-primary-menu.c  window-private.h  window.c  window.h
